Update: translate some library file

--- a/libraries/benchmark.html
+++ b/libraries/benchmark.html
@@ -172,7 +172,7 @@ $this->benchmark->mark('another_mark<kbd>_end</kbd>');
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="../general/security.html">安全性(Security)</a>
+上個主題:&nbsp;&nbsp;<a href="../doc_style/index.html">撰寫文件</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
