--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -58,6 +58,18 @@
 <h1>通用函數(Common Functions)</h1>
 
 <p>CodeIgniter 使用少許幾個全域函數來協助運行，你也可以在任何時候呼叫它們。這不需要載入任何程式庫或是補助函數。</p>
+
+<h2>is_php('<var>version_number</var>')</h2> 
+ 
+<p>is_php() 判斷系統的PHP的版本號是否高於你所提供的 <var>version_number</var>。</p> 
+ 
+<code>if (is_php('5.3.0'))<br /> 
+{<br /> 
+&nbsp;&nbsp;&nbsp;&nbsp;$str = quoted_printable_encode($str);<br /> 
+}</code> 
+ 
+<p>如果系統的 PHP 版本等於或高於你所提供的版本，本函數將返回布林值 <kbd>TRUE</kbd>。如果系統的 PHP 版本低於你所提供的那個版本，本函數將返回 <kbd>FALSE</kbd>。</p> 
+
 <h2>is_really_writable('<var>path/to/file</var>')</h2>
 <p>在Windows伺服器上，除非檔案屬性標示成唯讀否則作業系統不會傳回 FALSE，結果就是即使你真的無法寫入檔案 is_writable() 仍然可能返回 TRUE 。這個函數會先嘗試寫入檔案來確認它是否真的可以寫入。一般只有在平台不可靠時才建議你是用這個函數。</p>
 <code>if (is_really_writable('file.txt'))<br />
@@ -72,6 +84,20 @@ else<br />
 <p><a href="../libraries/config.html">Config library</a> 是存取設定資訊時建議使用的方法，不過 config_item() 也能用來取得單獨的鍵值。參閱 <a href="../libraries/config.html">Config library</a> 文件來獲得更多資訊。</p>
 <h2>show_error('<var>message</var>'), show_404('<var>page</var>')，log_message('<var>level</var>', '<samp>message</samp>')</h2>
 <p>這些在 <a href="errors.html">錯誤處理</a> 文件中有說明。</p>
+
+<h2>set_status_header(<var>code</var>, '<var>text</var>');</h2> 
+ 
+<p>允許您手動設定伺服器 status header。範例:</p> 
+ 
+<code>set_status_header(401);<br /> 
+// 將表頭 header 設定為:  Unauthorized</code> 
+ 
+<p><a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html">點選這裡</a>參考全部表頭清單。</p> 
+ 
+ 
+<h2>remove_invisible_characters(<var>$str</var>)</h2> 
+<p>此函數可以防止插入空字元(NULL)到 ASCII 字元之間，就像 Java\0script.</p> 
+
 </div>
 <!-- END CONTENT -->
 
@@ -82,7 +108,7 @@ else<br />
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="scaffolding.html">Scaffolding</a></p>
+下個主題:&nbsp;&nbsp;<a href="routing.html">URI 路由</a></p>
 <p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab, Inc.</a></p>
 </div>
 
