--- a/general/core_classes.html
+++ b/general/core_classes.html
@@ -168,7 +168,7 @@ class MY_Input extends CI_Input {<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="creating_libraries.html">建立自己的程式庫</a>
+上個主題:&nbsp;&nbsp;<a href="creating_libraries.html">新增程式庫(Library)</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
