Update some translate installation/upgrade_200.html file

--- a/installation/upgrade_200.html
+++ b/installation/upgrade_200.html
@@ -57,7 +57,7 @@
 
 <h1>從 1.7.3 升級到 2.0.0</h1>
 
-<p>Before performing an update you should take your site offline by replacing the index.php file with a static one.</p>
+<p>在進行升級版本之前，請先替換掉原來 index.php 檔案，使用靜態頁面來顯示，確保網站為離線狀態。</p>
 
 
 
