Fix some translate installation/upgrade_200.html file

--- a/installation/upgrade_200.html
+++ b/installation/upgrade_200.html
@@ -63,7 +63,7 @@
 
 <h2>步驟 1: 更新您的 CodeIgniter 檔案</h2>
 
-<p><strong>除了</strong>您的 <kbd>application</kbd> 目錄之外，請取代 "system" 目錄下所有檔案根目錄。</p>
+<p><strong>除了</strong>您的 <kbd>application</kbd> 目錄之外，請取代 "system" 目錄下所有檔案跟目錄。</p>
 
 <p class="important"><strong>注意:</strong> 假如您有自己開發的目錄跟程式，請先備份它們。</p>
 
