--- a/changelog.html
+++ b/changelog.html
@@ -59,6 +59,25 @@
 
 <p>The <img src="images/reactor-bullet.png" width="16" height="16" alt="Reactor Marker" /> indicates items that were contributed to CodeIgniter via CodeIgniter Reactor.</p>
 
+<h2>版本 2.0.1</h2>
+<p>發佈日期: n/a<br />
+Hg 標籤: n/a</p>
+
+<ul>
+        <li>Libraries
+                <ul>
+                        <li class="reactor">Added <kbd>decimal</kbd>, <kbd>less_than</kbd> and <kbd>greater_than</kbd> rules to the <a href="libraries/parser.html">Form validation Class</a>.</li>
+                </ul>
+        </li>
+</ul>
+
+<h3>Bug fixes for 2.0.1</h3>
+<ul>
+        <li class="reactor">CLI requests can now be run from any folder, not just when CD'ed next to index.php.</li>
+        <li class="reactor">Fixed issue #41: Added audio/mp3 mime type to mp3.</li>
+        <li class="reactor">Fixed a bug (#329) where the file caching driver referenced the incorrect cache directory.</li>
+</ul>
+
 <h2>版本 2.0.0</h2>
 <p>發佈日期: 2011年1月28日<br />
 Hg 標籤: v2.0.0</p>
