--- a/toc.html
+++ b/toc.html
@@ -119,6 +119,14 @@
 	<li><a href="./doc_style/index.html">撰寫文件</a></li>
 </ul>
 
+<h3>更多資源</h3>
+
+<ul>
+<li><a href="http://www.codeigniter.org.tw/forum/">社群論壇(中文)</a></li>
+<li><a href="http://www.codeigniter.com/forums/">社群論壇(英)</a></li>
+<li><a href="http://www.codeigniter.com/wiki/">社群 wiki</a></li>
+</ul>
+
 </td>
 <td valign="top" width="25%">
 
@@ -128,7 +136,6 @@
 <li><a href="./libraries/calendar.html">Calendaring 類別</a></li>
 <li><a href="./libraries/cart.html">Cart 類別</a></li>
 <li><a href="./libraries/config.html">Config 類別</a></li>
-<li><a href="./database/index.html">Database 類別</a></li>
 <li><a href="./libraries/email.html">Email 類別</a></li>
 <li><a href="./libraries/encryption.html">Encryption 類別</a></li>
 <li><a href="./libraries/file_uploading.html">File Uploading 類別</a></li>
@@ -158,6 +165,13 @@
 </td>
 <td valign="top" width="25%">
 
+<h3>Driver Reference</h3>
+<ul>
+<li><a href="./libraries/caching.html">Caching 類別</a></li>
+<li><a href="./database/index.html">Database 類別</a></li>
+<li><a href="./libraries/javascript.html">Javascript 類別</a></li>
+</ul>
+
 <h3>補助函式參考</h3>
 <ul>
 <li><a href="./helpers/array_helper.html">Array 輔助函數</a></li>
@@ -182,15 +196,6 @@
 <li><a href="./helpers/url_helper.html">URL 輔助函數</a></li>
 <li><a href="./helpers/xml_helper.html">XML 輔助函數</a></li>
 </ul>
-
-<h3>更多資源</h3>
-
-<ul>
-<li><a href="http://www.codeigniter.org.tw/forum/">社群論壇(中文)</a></li>
-<li><a href="http://www.codeigniter.com/forums/">社群論壇(英)</a></li>
-<li><a href="http://www.codeigniter.com/wiki/">社群 wiki</a></li>
-</ul>
-
 
 </td>
 </tr>
