--- a/helpers/captcha_helper.html
+++ b/helpers/captcha_helper.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CAPTCHA Helper : CodeIgniter User Guide</title>
+<title>CAPTCHA 輔助函數 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -17,7 +17,7 @@
 <meta http-equiv= 'pragma' content='no-cache' />
 <meta name='robots' content='all' />
 <meta name='author' content='ExpressionEngine Dev Team' />
-<meta name='description' content='CodeIgniter User Guide' />
+<meta name='description' content='CodeIgniter 使用手冊' />
 
 </head>
 <body>
@@ -28,8 +28,8 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter User Guide Version 2.0.0</h1></td>
-<td id="breadcrumb_right"><a href="../toc.html">Table of Contents Page</a></td>
+<td><h1>CodeIgniter 使用手冊 Version 2.0.0</h1></td>
+<td id="breadcrumb_right"><a href="../toc.html">目錄</a></td>
 </tr>
 </table>
 </div>
@@ -40,11 +40,11 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://codeigniter.com/">CodeIgniter Home</a> &nbsp;&#8250;&nbsp;
-<a href="../index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
-CAPTCHA Helper
+<a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
+<a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
+CAPTCHA 輔助函數
 </td>
-<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
+<td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
 </table>
 <!-- END BREADCRUMB -->
@@ -56,17 +56,17 @@ CAPTCHA Helper
 <div id="content">
 
 
-<h1>CAPTCHA Helper</h1>
+<h1>CAPTCHA 輔助函數</h1>
 
-<p>The CAPTCHA Helper file contains functions that assist in creating CAPTCHA images.</p>
+<p>驗證碼輔助函數提供一些產生驗證碼相關函數。</p>
 
 
-<h2>Loading this Helper</h2>
+<h2>載入輔助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>輔助函數使用下列方式載入：</p>
 <code>$this->load->helper('captcha');</code>
 
-<p>The following functions are available:</p>
+<p>可用的函數如下：</p>
 
 <h2>captcha_create(<var>$data</var>)</h2>
 
@@ -88,9 +88,9 @@ CAPTCHA Helper
 	<p>The "word" is the word that appears in the captcha image, which if not
 	supplied to the function, will be a random string.</p>
 
-	<h3>Using the CAPTCHA helper</h3>
+	<h3>使用驗證碼補助函數</h3>
 
-	<p>Once loaded you can generate a captcha like this:</p>
+	<p>載入後，產生驗證碼就如同下面程式碼：</p>
 
 <code>$vals = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;'word'		 => 'Random word',<br />
@@ -106,20 +106,18 @@ $cap = create_captcha($vals);<br />
 echo $cap['image'];</code>
 
 	<ul>
-		<li>The captcha function requires the GD image library.</li>
-		<li>Only the img_path and img_url are required.</li>
-		<li>If a "word" is not supplied, the function will generate a random
-		ASCII string.  You might put together your own word library that
-		you can draw randomly from.</li>
+		<li>驗證碼函數需要 GD 的套件函式庫。</li>
+		<li>只需要 img_path 跟 img_url 就可以產生驗證碼</li>
+		<li>假如 word 欄位沒有填寫，此函數會自動幫您產生隨機字串(ASCII string)。
+        或者是您可以放入自行產生的隨機函式庫。</li>
 		<li>If you do not specify a path to a TRUE TYPE font, the native ugly GD
 		font will be used.</li>
-		<li>The "captcha" folder must be writable (666, or 777)</li>
+		<li>"captcha" 目錄必須是要可以寫入的 (666, or 777)</li>
 		<li>The "expiration" (in seconds) signifies how long an image will
-		remain in the captcha folder before it will be deleted.  The default
-		is two hours.</li>
+		remain in the captcha folder before it will be deleted.  預設值是兩小時。</li>
 	</ul>
 
-	<h3>Adding a Database</h3>
+	<h3>新增資料庫</h3>
 
 	<p>In order for the captcha function to prevent someone from submitting, you will need
 	to add the information returned from <kbd>create_captcha()</kbd> function to your database.
@@ -137,7 +135,7 @@ echo $cap['image'];</code>
 &nbsp;KEY `word` (`word`)<br />
 );</code>
 
-	<p>Here is an example of usage with a database.  On the page where the CAPTCHA will be shown you'll have something like this:</p>
+	<p>使用資料庫請參考底下範例。顯示認証碼圖片頁面，你會得到底下程式碼：</p>
 
 <code>$this-&gt;load-&gt;helper(&#x27;captcha&#x27;);<br />
 $vals = array(<br />
@@ -160,7 +158,7 @@ echo &#x27;Submit the word you see below:&#x27;;<br />
 echo $cap[&#x27;image&#x27;];<br />
 echo &#x27;&lt;input type=&quot;text&quot; name=&quot;captcha&quot; value=&quot;&quot; /&gt;&#x27;;</code>
 
-	<p>Then, on the page that accepts the submission you'll have something like this:</p>
+	<p>然後, 此頁面會接受前端傳送的資料，程式碼如下：</p>
 
 <code>// First, delete old captchas<br />
 $expiration = time()-7200; // Two hour limit<br />
@@ -183,13 +181,21 @@ if ($row-&gt;count == 0)<br />
 
 <div id="footer">
 <p>
-Previous Topic:&nbsp;&nbsp;<a href="url_helper.html">URL Helper</a>
+上個主題:&nbsp;&nbsp;<a href="url_helper.html">URL 輔助函數</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="../index.html">User Guide Home</a>
+<a href="#top">回到頂端</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
+<a href="../index.html">使用手冊首頁</a>
 </p>
-<p><a href="http://codeigniter.com">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
+<p><a href="http://www.codeigniter.org.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006 - 2011 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">EllisLab, Inc.</a></p>
 </div>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-5766319-11");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
