Fix User Guide Captcha Helper Documentation Incorrect

--- a/helpers/captcha_helper.html
+++ b/helpers/captcha_helper.html
@@ -68,7 +68,7 @@ CAPTCHA 輔助函數
 
 <p>可用的函數如下：</p>
 
-<h2>captcha_create(<var>$data</var>)</h2>
+<h2>create_captcha(<var>$data</var>)</h2>
 
 <p>傳入一個您定義的陣列函數值來產生驗證碼，函數會回傳產生驗證碼圖片鎮列資料。</p>
 
