Update: translate database/table_data.html

--- a/database/index.html
+++ b/database/index.html
@@ -70,12 +70,12 @@ Database 類別
 		<li><a href="helpers.html">Query 補助函數</a></li>
 		<li><a href="active_record.html">Active Record 類別</a></li>
 		<li><a href="transactions.html">交易</a></li>
-		<li><a href="table_data.html">資料表元資料</a></li>
-		<li><a href="fields.html">欄位元資料</a></li>
-		<li><a href="call_function.html">自訂函數呼叫</a></li>
+		<li><a href="table_data.html">資料表資訊</a></li>
+		<li><a href="fields.html">欄位資訊</a></li>
+		<li><a href="call_function.html">自訂函數</a></li>
 		<li><a href="caching.html">查詢快取</a></li>
 		<li><a href="forge.html">使用 Database Forge 來管理資料庫</a></li>
-		<li><a href="utilities.html">資料庫公用類別</a></li>
+		<li><a href="utilities.html">資料庫工具類別</a></li>
 	</ul>
 	
 
