--- a/database/connecting.html
+++ b/database/connecting.html
@@ -159,7 +159,12 @@ $DB2 = $this->load->database('group_two'，TRUE);
 
 <code>$this->db->reconnect();</code>
 
-
+<h2>Manually closing the Connection</h2>
+ 
+	
+<p>While CodeIgniter intelligently takes care of closing your database connections, you can explicitly close the connection.</p>
+ 
+<code>$this->db->close();</code>
 
 </div>
 <!-- END CONTENT -->
